[package]
name = "snake"
version = "0.1.0"
authors = ["feras.albaroudi@gmail.com <feras.albaroudi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"

[dependencies.crossterm]
version = "0.17"
features = ["event-stream"] 